--- a/task_5/Polynomial/Polynomial/Polynomial.csproj
+++ b/task_5/Polynomial/Polynomial/Polynomial.csproj
@@ -36,6 +36,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Monomial.cs" />
     <Compile Include="Polynomial.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
