--- a/task_5/task_5/Vector.Test/Vector.Test.csproj
+++ b/task_5/task_5/Vector.Test/Vector.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\task_5\Vector.csproj" />
+    <ProjectReference Include="..\Vector\Vector.csproj" />
   </ItemGroup>
 
 </Project>
